 - Changed the respawn time of Copper Oreleaf from 36 minutes to 30 minutes.
 - Moved Change of Heart to the Magic skill category.
 - Presents now have a 50% drop chance on December 25th rather than the default 20%.
 - Red Gel can now be used on party members in battle.
 - Sharpened battleback images.

Music Update (Final Wave):
 - Redid "New Lands".

Balancing:
 - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
 - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
 - Nerfed Mana Refund's return to 1% of damage dealt (was originally 5%).
 - Increased price of Metal Wristbraces ★ from 180B to 300B.
 - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
 - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
 - Buffed the Knight's Greaves' DEF by 1 and AGI by 2 and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.
 - All levels of Well Fed increase ATK and MAT by +2%, +4%, and +6% at each respective level (respectively).
 - Increased Player 1's base MHP at levels 1 and 2 from [40, 48] to [48, 54].
 - Replaced The Warden's Darkfire with Engulfing Darkness.

Bug Fixes:
 - Fixed a softlock that I could have sworn was already fixed where you could push a boulder in Laeryidyean's Forest - Left Connector off the boulder tiles.
 - Fixed a bug where conditional drops did not work correctly (e.g. night boosted enemies did not properly increase their item drop rate).
 - Fixed a bug where the little loot explosion after defeating an enemy sometimes did not show the correct drops.
 - Fixed a bug where the Suffering Soul had only 25% physical element damage reduction rather than the intended 50%.
 - Fixed a bug where Brawl Brew and Warding Swig would not bypass death removal.
 - Fixed a bug where life steal attributes with decimals would not be parsed correctly.
 - Fixed a bug where playtime wouldn't increase correctly on non-60hz displays.