@@ -940,13 +940,13 @@
       "type": 0,
       "variance": 20
     },
-    "description": "If you do the math, this is better than buying\n\\ii[9]\\c[0]s. So buy these up! Or use skills. \\c[31]+90 HP\\c[0]",
+    "description": "Heal up quicker and save some turns!\nBuy these up! Or use skills. \\c[31]+60 HP\\c[0]",
     "effects": [
       {
         "code": 11,
         "dataId": 0,
         "value1": 0,
-        "value2": 90
+        "value2": 60
       }
     ],
     "hitType": 0,
@@ -973,13 +973,13 @@
       "type": 0,
       "variance": 20
     },
-    "description": "It's even sparklier than the \\ii[14]. You'd\nbetter like the fizz, 'cause there's a lot. \\c[16]+36 MP\\c[0]",
+    "description": "It's even sparklier than the \\ii[14]. You'd\nbetter like the fizz, 'cause there's a lot. \\c[16]+24 MP\\c[0]",
     "effects": [
       {
         "code": 12,
         "dataId": 0,
         "value1": 0,
-        "value2": 36
+        "value2": 24
       }
     ],
     "hitType": 0,
@@ -2067,19 +2067,19 @@
       "type": 0,
       "variance": 20
     },
-    "description": "A combination of a \\ii[32] and \\ii[33]. The recovery is\ngreat, as well as the contrasting flavors! \\c[31]+108 HP\\c[0] \\c[16]+42 MP\\c[0]",
+    "description": "A combination of a \\ii[32] and \\ii[33]. The recovery is\ngreat, as well as the contrasting flavors! \\c[31]+72 HP\\c[0] \\c[16]+30 MP\\c[0]",
     "effects": [
       {
         "code": 11,
         "dataId": 0,
         "value1": 0,
-        "value2": 108
+        "value2": 72
       },
       {
         "code": 12,
         "dataId": 0,
         "value1": 0,
-        "value2": 42
+        "value2": 30
       }
     ],
     "hitType": 0,
@@ -5513,13 +5513,13 @@
       "type": 0,
       "variance": 20
     },
-    "description": "The strongest potion you'll find in a normal shop. Heals\nmore than enough HP for the average traveler. \\c[31]+270 HP\\c[0]",
+    "description": "The strongest potion you'll find in a normal shop. Heals\nmore than enough HP for the average traveler. \\c[31]+120 HP\\c[0]",
     "effects": [
       {
         "code": 11,
         "dataId": 0,
         "value1": 0,
-        "value2": 270
+        "value2": 120
       }
     ],
     "hitType": 0,
@@ -5546,13 +5546,13 @@
       "type": 0,
       "variance": 20
     },
-    "description": "The fizziness is almost overwhelming. You can feel each individual\ncarbon dioxide atom enter your body. Embrace the fizz. \\c[16]+108 MP\\c[0]",
+    "description": "The fizziness is almost overwhelming. You can feel each individual\ncarbon dioxide atom enter your body. Embrace the fizz. \\c[16]+48 MP\\c[0]",
     "effects": [
       {
         "code": 12,
         "dataId": 0,
         "value1": 0,
-        "value2": 108
+        "value2": 48
       }
     ],
     "hitType": 0,
