@@ -224,6 +224,9 @@ Music Update (Final Wave):
  - Redid "New Lands".
 
 Balancing:
+ - Heavily nerfed the recovery of the Potion, Elixir, Ether.
+  ~ Potion's HP recovery was reduced from 90 to 60, and Elixir's MP recovery was reduced from 36 to 24.
+  ~ Since Ether heals ~20% more HP/MP than its Potion/Elixir counterpart, it has been nerfed accordingly.
  - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
  - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
  - Nerfed Mana Refund's return to 1% of damage dealt (was originally 5%).
